--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clean": "rimraf dist",
     "start": "node dist/index.js",
     "build": "npm run clean && tsc",
-    "start:dev": "ts-node-dev src/index.ts"
+    "start:dev": "ts-node-dev src/index.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,12 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.5",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "rimraf": "^4.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
