--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
       "error",
       "always"
     ],
-    "@typescript-eslint/comma-dangle": 0
+    "@typescript-eslint/comma-dangle": 0,
+    "@typescript-eslint/strict-boolean-expressions": 0,
+    "@typescript-eslint/consistent-type-imports": 0
   }
 }
