--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run clean && tsc",
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,15 +25,21 @@
   "homepage": "https://github.com/Matthewnte/air-quality#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.1",
     "rimraf": "^4.4.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
   },
