--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "jest"
+    "test": "npm run lint && jest"
   },
   "repository": {
     "type": "git",
