--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,25 +1,24 @@
 version: '3.9'
 services:
-  air_quality_db:
+  air_quality_db_test:
     image: mongo:latest
     restart: always
     ports:
       - '27017:27017'
     environment:
       - MONGO_INITDB_DATABASE=$DB_NAME
-    container_name: air_quality_db
+    container_name: air_quality_db_test
 
-  air_quality_api:
+  air_quality_api_test:
     build:
       context: .
       target: build
-    container_name: air_quality_api
-    command: npm run start:dev
+    container_name: air_quality_api_test
+    command: npm run test
     env_file:
       - .env
     environment:
       - PORT=$PORT
-      - NODE_ENV=development
     ports:
       - 8080:$PORT
     volumes:
