update env variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 PORT=8080
-OPT=../opt/logs
+DB_NAME=air-quality
+DB_URL=mongodb://air_quality_db:27017/air-quality # use localhost if you are running locally
+TEST_DB_URL=mongodb://air_quality_db_test:27017/air-quality-test # # use localhost if you are running locally
+#iqair
+IQAIR_BASEURL="iqair-baseurl"
+IQAIR_API_KEY="iqair-api-key"
