--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
     "semi": 0,
     "@typescript-eslint/comma-dangle": 0,
     "@typescript-eslint/strict-boolean-expressions": 0,
-    "@typescript-eslint/consistent-type-imports": 0
+    "@typescript-eslint/consistent-type-imports": 0,
+    "@typescript-eslint/no-non-null-assertion": 0,
+    "@typescript-eslint/no-misused-promises": 0,
+    "@typescript-eslint/explicit-function-return-type": 0
   }
 }
