--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "npm run lint && jest"
+    "test": "npm run lint && jest",
+    "cron:start": "npx ts-node-dev src/cron/index.ts",
+    "cron:stop": "npx ts-node-dev src/cron/index.ts --start=false"
   },
   "repository": {
     "type": "git",
@@ -24,10 +26,12 @@
   },
   "homepage": "https://github.com/Matthewnte/air-quality#readme",
   "devDependencies": {
+    "@types/command-line-args": "^5.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.5",
+    "@types/node-cron": "^3.0.7",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
@@ -36,7 +40,6 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
-    "mongodb-memory-server": "^8.12.1",
     "rimraf": "^4.4.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
@@ -44,11 +47,14 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "command-line-args": "^5.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "winston": "^3.8.2"
   }
 }
